# EP-ROS

./: .gitignore  .gitmodules  README.md
doc/: setup.md
src/ep_base/: CMakeLists.txt  base.py  package.xml
src/ep_base/example/: PID.py  SDK_test.py  example.ipynb  example.py  fellow_line.py  img_.py
src/ep_base/msg/: Gripper.msg
src/ep_base/robomaster/: __init__.py  robot.py
src/ep_base/robomaster/connection/: __init__.py  connection.py
src/ep_base/robomaster/module/: __init__.py  ai.py  arm.py  armor.py  blaster.py  camera.py  chassis.py  gimbal.py  gripper.py  led.py  microphone.py  sound.py  status.py
src/ep_base/robomaster/module/decoder/: audio_decoder.py  video_decoder.py
src/ep_base/robomaster/module/decoder/src/: CMakeLists.txt
src/ep_base/robomaster/module/decoder/src/cmake/: FindOpus.cmake
src/ep_base/robomaster/module/decoder/src/h264_decoder/: h264decoder.cpp  h264decoder.hpp
src/ep_base/robomaster/module/decoder/src/opus_decoder/: opus_decoder.cpp  opus_decoder.h
src/ep_bringup/: CMakeLists.txt  package.xml
src/ep_bringup/config/: head_camera.yaml  tags.yaml  tags_settings.yaml
src/ep_bringup/launch/: detecting.launch  ep_base.launch  ep_bringup.launch  ep_localization.launch  map.launch
src/ep_bringup/map/: winter_camp.yaml
src/ep_decision/: CMakeLists.txt  decision.py  package.xml
src/ep_localization/: CMakeLists.txt  package.xml
src/ep_localization/include/: tags_localization.h
src/ep_localization/src/tags_localizaiton/: tags_local_node.cpp  tags_localization.cpp
src/ep_localization/src/tags_lut/: tags_lut.cpp
