<?xml version="1.0"?>
<package format="2">
    <name>ep_localization</name>
    <version>1.0.0</version>
    <description>The ep_localization package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>tf</build_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
